2009-07-01  Ben Elliston  <bje@au.ibm.com>

	Backport from mainline:

	2008-10-04  Anton Blanchard  <anton@samba.org>

	* config/rs6000/rs6000.c (rs6000_emit_sync): Use gen_lwsync().
	(rs6000_split_atomic_op): Same.
	(rs6000_split_compare_and_swap): Same.
	(rs6000_split_compare_and_swapqhi): Same.

2009-06-30  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/40542
	* tree-vect-analyze.c (vect_determine_vectorization_factor): Don't 
	vectorize volatile types.

2009-06-29  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40579
	* tree-vrp.c (vrp_evaluate_conditional_warnv): Bail out early if
	the IL to simplify has constants that overflowed.

2009-06-28  Uros Bizjak  <ubizjak@gmail.com>

	PR tree-optimization/40550
	* tree-vect-generic.c (expand_vector_operations_1): Compute in
	vector_compute_type only when the size of vector_compute_type is
	less than the size of type.

2009-06-27  Kai Tietz  <kai.tietz@onevision.com>

	Merged from trunk rev/148061
	2009-06-01  Jakub Jelinek  <jakub@redhat.com>
	PR other/40024
	* emutls.c (__emutls_get_address): Change arr->size to mean number
	of allocated arr->data entries instead of # of slots + 1.

2009-06-25  Richard Guenther  <rguenther@suse.de>

	* c-parser.c (c_parser_postfix_expression): Fix merge glitch.

2009-06-25  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-01-07  Richard Guenther  <rguenther@suse.de>

	PR middle-end/38751
	* fold-const.c (extract_muldiv): Remove obsolete comment.
	(fold_plusminus_mult_expr): Undo MINUS_EXPR
	to PLUS_EXPR canonicalization for the canonicalization.

2009-06-25  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-01-12  Jakub Jelinek  <jakub@redhat.com>

	PR c/32041
	* c-parser.c (c_parser_postfix_expression): Allow `->' in
	offsetof member-designator, handle it as `[0].'.

	2008-09-28  Andrew Pinski  <andrew_pinski@playstation.sony.com>
		Kaushal Kantawala  <kaushal_kantawala@playstation.sony.com>

	PR tree-optimization/36891